ComposeRunner - Avoid resetting env vars
This is a regression introduced by the move to SmallRye Common
Process.

Fixes #49380

(cherry picked from commit 751720892acea33f565e6c4b91353f580ca1eb36)